<resources>
    <string name="app_name">missing</string>
    <string name="facebook_app_id">630094763841974</string>

    <string name="slideImage">Sliding Image</string>
    <string name="firstImage">Welcome to our Family</string>
    <string name="secondImage">We hope to help family to find her/his child</string>
    <string name="thirdImage">Now you can Login</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="forgetPassword">Forget Password ?</string>
    <string name="register">Sign up</string>
    <string name="login">Sign In</string>
    <string name="faceGoogle">Choose city and phone then Confirm</string>
    <string name="userName">User Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="childName">Missing Name</string>
    <string name="childAge">Age</string>
    <string name="childskin">Skin Color</string>
    <string name="childhair">Hair Color</string>
    <string name="childEyeColor">Eye Coloe</string>
    <string name="childLength">Length</string>
    <string name="lostDate">Lost Date</string>
    <string name="Buttonsave">Save</string>
    <string name="timer">Timer</string>
    <string name="title_activity_maps">Map</string>
    <string name="title">Find Missing</string>
    <string name="parentGallery">Parent Gallery</string>
    <string name="userGallery">user Gallery</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="logout">Log out</string>
    <string name="language">Language</string>
    <string name="others">Others</string>
    <string name="profile">Profile</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="my_image">My Image</string>
    <string name="user_image">User Image</string>
    <string name="time">Time</string>
    <string name="last_seen">Last Seen</string>
    <string name="search">Search</string>
    <string name="face_recognition">Face Recognition</string>
    <string name="title_activity_profile">profile</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="returnprofile">Return</string>
    <string name="changeprofile">Change</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_image">Delete Image</string>
    <string name="filter">Filter</string>
    <string name="age_from_2_8"><![CDATA[Age From 2 ----> 8]]></string>
    <string name="filter_button">Filter</string>
    <string name="back_button">Back</string>
    <string name="delete_notify">Delete</string>
    <string name="alert_checkIamgeExist">No Image Added yet, Add your image</string>
    <string name="alert_title">Parent Gallery</string>
    <string name="alert_postive">Add</string>
    <string name="alert_cancel">Cancel</string>
    <string name="age_from_9_15"><![CDATA[Age From 9 ----> 15]]></string>
    <string name="age_more_15">Age more 15</string>
    <string name="cairo">Cairo</string>
    <string name="alexandria">Alexandria</string>
    <string name="faiyum">Faiyum</string>
    <string name="giza">Giza</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_lib">Choose from Library</string>
    <string name="cancel">Cancel</string>
    <string name="face_result">Sorry, No Image Recognition Your Image, Add this image In our library</string>
    <string name="face_result_title">Result</string>
    <string name="face_result_2">Face recognition Result</string>
    <string name="delete_image_sub">Are you sure to delete that\'s image</string>
    <string name="delete_image_title">Delete Image</string>
    <string name="delete_image_pos">Delete</string>
    <string name="myprofil">My Profile</string>
    <string name="popup_message">That is first time for please click Ok to see what will do or cancel it</string>
    <string name="pop_title">Information</string>
    <string name="popup_ok">ok</string>

    <string name="gallery">Gallery</string>
    <string name="addImage">Add</string>

    <string name="parent">Parents missing</string>
    <string name="helper">Helper</string>
    <string name="add_photo">Add Photo!</string>
    <string name="connect_with_your_place">Connect with your place</string>
    <string name="chat_builder">Chat</string>
    <string name="chat_message">Do you make conversation</string>
    <string name="chat_room_error">Sorry, chat not create try again</string>
    <string name="chat_room">Chat Room</string>
    <string name="chat_delete">Chat not delete Please try again</string>
    <string name="send_again">Send Again</string>
    <string name="confirm">Confirm</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>

    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="passwroderror">Password at least 8 Letter</string>
    <string name="addresserror">Enter a valid Address</string>
    <string name="phoneerror">Enter a valid Phone</string>
    <string name="enter_the_code_received">Enter the code received</string>
    <string name="add_information">Add Information</string>
    <string name="please_click_on_image_and_choose_image">Please Click on image and choose image</string>
    <string name="child_details">Child Details</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="please_choose_the_language_of_app">Please choose the language of App</string>
    <string name="write_your_message">Write your message</string>
    <string name="my_profile">My Profile</string>
    <string name="Notification_Details">Notification Details</string>
    <string name="filter_dailog">Filter Dialog</string>
    <string name="chat">Messages</string>

</resources>
