<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/move"
    tools:context="com.example.mahmoudheshmat.missing.Activites.Registration">
    <ImageView
        android:src="@drawable/missing_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView2" />


    <LinearLayout

        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/userName"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:id="@+id/username"
            android:textColorHint="@color/move"
            android:background="@drawable/angel"
            android:padding="10dp"/>

        <EditText
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:hint="@string/emailAddress"
            android:id="@+id/email"
            android:textColorHint="@color/move"
            android:background="@drawable/angel"
            android:padding="10dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/password"
            android:textColorHint="@color/move"
            android:background="@drawable/angel"
            android:padding="10dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:hint="@string/address"
            android:ems="10"
            android:id="@+id/address"
            android:textColorHint="@color/move"
            android:background="@drawable/angel"
            android:padding="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_marginTop="12dp"
            android:hint="@string/phone"
            android:ems="10"
            android:id="@+id/phone"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:textColorHint="@color/move"
            android:background="@drawable/angel"
            android:padding="10dp"/>


        <Button
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:id="@+id/button2"
            android:onClick="register"
            android:background="@drawable/circliangeleft"
            android:padding="15dp"
            android:layout_marginBottom="@dimen/dim15"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/move"
            android:textSize="20dp" />

    </LinearLayout>
</RelativeLayout>
