<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_missing_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mahmoudheshmat.missing.Activites.missingDetails">

    <include
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tool">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:id="@+id/card_view"
                android:layout_gravity="top|center"
                android:elevation="@dimen/dim3"
                card_view:cardUseCompatPadding="true"
                card_view:cardElevation="@dimen/dim3"
                card_view:cardCornerRadius="@dimen/dim2"
                app:cardBackgroundColor="@color/White"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/DchildImage"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dim300"
                        android:scaleType="fitXY"/>

                    <TextView
                        android:id="@+id/DTimer"
                        android:text="@string/timer"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dim20"
                        android:layout_alignParentBottom="true"
                        android:textColor="@color/orange" />


                    <ImageView
                        android:id="@+id/image_chat"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/chat_icon"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>


            </android.support.v7.widget.CardView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/angel"
                android:backgroundTint="@color/move"
                android:layout_marginTop="@dimen/dim5"
                android:layout_marginLeft="@dimen/dim15"
                android:layout_marginRight="@dimen/dim15">

                <TextView
                    android:id="@+id/Daddress"
                    android:text="@string/address"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dim18"
                    android:textColor="@color/white"/>

                <LinearLayout
                    android:id="@+id/LinearChildData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/dim10">

                    <TextView
                        android:id="@+id/DchildName"
                        android:text="@string/childName"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dim18"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/DAge"
                        android:text="@string/childAge"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dim18"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/DSkincolor"
                        android:text="@string/childskin"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dim18"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/DHaircolor"
                        android:text="@string/childhair"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dim18"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/DEyecolor"
                        android:text="@string/childEyeColor"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dim18"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/DLength"
                        android:text="@string/childLength"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dim18"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/DLostDate"
                        android:text="@string/lostDate"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dim18"
                        android:textColor="@color/white"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
