<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/new_password"
        android:textColorHint="@color/move"
        android:background="@drawable/angel"
        android:padding="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_new_password"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/confirm_new_password"
        android:textColorHint="@color/move"
        android:background="@drawable/angel"
        android:padding="10dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/changePassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/circliangeleft"
        android:backgroundTint="@color/move"
        android:padding="12dp"
        android:text="@string/confirm"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:textColor="@color/white" />



</LinearLayout>